# Umpire

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yml  .travis.yml  .uberenv_config.json  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  Makefile  README.md  RELEASE  RELEASE_NOTES.md  REPRODUCIBILITY_APPENDIX.md  azure-pipelines.yml  codecov.yml  environment.yml  index.html  index.ipynb  pandas-input.py  postBuild  read-input.py  reader.py  umpire-config.cmake.in  umpire.0000.replay  umpire.121537.0.replay  umpire.50504.0.replay  umpire.78854.0.replay
benchmarks/: CMakeLists.txt  allocation_benchmarks.cxx  allocation_size_benchmarks.cpp  allocation_size_stress_test.cpp  allocator_benchmarks.cpp  allocator_burn_test.cpp  allocator_memory_cost_benchmark.cpp  allocator_no-op_benchmarks.cpp  allocator_relative_benchmarks  allocator_stress_test.cpp  copy_benchmarks.cpp  copy_stress_test.cpp  debuglog_benchmarks.cpp  device_allocator_stress_test.cpp  file_resource_benchmarks.cpp  fixed_pool_stress_test.cpp  gpu_allocation_benchmarks.cxx  inspector_benchmarks.cpp  no-op_stress_test.cpp  pool_benchmarks.cpp  pool_stress_test.cpp  pools_stress_test.cpp  resource_aware_pool_stress_test.cpp  vendor_allocator_benchmarks.cpp
benchmarks/dev_benchmarks/: CMakeLists.txt
benchmarks/user_benchmarks/: CMakeLists.txt  file_resource_benchmarks.cpp
docs/: CMakeLists.txt  conf.py  index.rst
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: CMakeLists.txt  CONTRIBUTING.md  advanced_configuration.rst  concepts.rst  conf.py  conf.py.in  contribution_guide.rst  cookbook.rst  developer_guide.rst  features.rst  getting_started.rst  index.rst  requirements.txt  tutorial.rst
examples/: CMakeLists.txt  aligned_allocator.cpp  aligned_allocator_stress.cpp  allocAccess.cpp  allocator.F  allocator.c  allocator.cxx  allocator_access.cpp  api_v2.cpp  backtrace_example.cpp  caliper_example.cpp  cuda-device-allocator.cpp  cuda-moving_avg.cpp  device-allocator.cpp  device_const_mem_real_case.cu  file_with_cuda.cpp  fixed_pool_test.cpp  get_parent.cpp  get_spaces.cxx  hello_pool.cpp  heuristic_test.cpp  hipMalloc_test.cpp  host-moving_avg.cpp  malloc.cxx  malloc_gpu.cxx  mixed_pool.cpp  moving_avg.cpp  multi_device.cpp  my_test.cpp  noop_malloc.cpp  out_of_bounds.cpp  pool.cpp  quickpool_heuristic.cpp  rap_example.cpp  rap_test.cpp  replay_creation_example.cpp  reproducer-cuda.cpp  reproducer.cpp  sap_test.cpp  scratch.cpp  (+13 more)
examples/cookbook/: CMakeLists.txt  recipe_advice_device_id.cpp  recipe_coalesce_pool.cpp  recipe_control_granularity.cpp  recipe_device_allocator.cpp  recipe_dynamic_pool_heuristic.cpp  recipe_filesystem_memory_allocation.cpp  recipe_four_advice_device_id.cpp  recipe_get_largest_available_block_in_pool.cpp  recipe_memprefetch_pool.F  recipe_memprefetch_pool.cpp  recipe_mixed_pool.cpp  recipe_move_between_numa.cpp  recipe_move_between_sicm_devices.cpp  recipe_move_to_managed.cpp  recipe_mpi_shared_memory.cpp  recipe_named_allocation.cpp  recipe_naming_shim.cpp  recipe_no_introspection.cpp  recipe_numa_allocator.cpp  recipe_one_shrink.cpp  recipe_pinned_pool.F  recipe_plot_allocations.cpp  recipe_pool_advice.cpp  recipe_prefetch_pool.F  recipe_shared_memory.cpp  recipe_shrink.cpp  recipe_strategy_name.cpp  recipe_thread_safe.F  recipe_thread_safe.cpp  recipe_three_pool_advice.cpp  recipe_use_advice_ops.cpp
examples/diffusion/: CMakeLists.txt  diffusion.cpp
examples/lulesh/: CMakeLists.txt  lulesh.cxx
examples/tutorial/: CMakeLists.txt  tut_allocator.cpp  tut_copy.cpp  tut_dynamic_pool.cpp  tut_dynamic_pool_1.cpp  tut_dynamic_pool_2.cpp  tut_get_parent.cpp  tut_introspection.cpp  tut_memset.cpp  tut_move.cpp  tut_reallocate.cpp  tut_replay.cpp  tut_replay_log.csv  tut_replay_log.json  tut_resources.cpp  tut_typed_allocator.cpp
src/: AllocationRecord.hpp  Allocator.cpp  Allocator.hpp  AllocatorFactory.hpp  AllocatorInterface.hpp  AllocatorRegistry.cpp  AllocatorRegistry.hpp  AllocatorTraits.hpp  CMakeLists.txt  CudaMallocAllocator.hpp  CudaMallocAllocator.inl  CudaSpace.cpp  HostSpace.cpp  HostSpace.hpp  MallocAllocator.hpp  MallocAllocator.inl  MemoryAllocator.hpp  MemorySpace.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  ResourceManager.inl  TypedAllocator.hpp  TypedAllocator.inl  Umpire.hpp  config.hpp.in  uncrustify.cfg
src/alloc/: CMakeLists.txt  CnmemAllocator.hpp  CudaMallocAllocator.hpp  CudaMallocAllocator.inl  CudaMallocManagedAllocator.hpp  CudaManagedAllocator.hpp  CudaPinnedAllocator.hpp  MallocAllocator.hpp  MallocAllocator.inl  MemoryAllocator.hpp  Pool.cpp  Pool.hpp  Pool.inl  PosixMemalignAllocator.hpp  PosixMemalignAllocator.inl
src/benchmarks/: allocation_benchmarks.cxx  gpu_allocation_benchmarks.cxx
src/interface/: CMakeLists.txt  umpire.h  umpire_shroud.yaml
src/op/: CMakeLists.txt  CopyOperation.cpp  CopyOperation.hpp  CudaAdviseAccessedBy.cpp  CudaAdviseAccessedByOperation.cpp  CudaAdviseAccessedByOperation.hpp  CudaAdvisePreferredLocation.cpp  CudaAdvisePreferredLocationOperation.cpp  CudaAdvisePreferredLocationOperation.hpp  CudaAdviseReadMostly.hpp  CudaAdviseReadMostlyOperation.cpp  CudaAdviseReadMostlyOperation.hpp  CudaCopyFromOperation.cpp  CudaCopyFromOperation.hpp  CudaCopyOperation.cpp  CudaCopyOperation.hpp  CudaCopyToOperation.cpp  CudaCopyToOperation.hpp  CudaMemsetOperation.cpp  CudaMemsetOperation.hpp  GenericReallocateOperation.cpp  GenericReallocateOperation.hpp  HostCopyOperation.cpp  HostCopyOperation.hpp  HostMemsetOperation.cpp  HostMemsetOperation.hpp  HostReallocateOperation.cpp  HostReallocateOperation.hpp  MemoryOperation.cpp  MemoryOperation.hpp  MemoryOperationRegistry.cpp  MemoryOperationRegistry.hpp
tests/: CMakeLists.txt  allocator_registry_tests.cpp  exception_tests.cpp  resource_manager_tests.cpp  space_registry_tests.cpp  stdlib_alloc_tests.cpp  umpire_tests.cpp
tools/: CMakeLists.txt  InputParser.hpp  replay.cpp  replay_allocation_map.cpp  replaydiff.cpp
(+1168 files in other folders)
