##############################################################################
# Copyright (c) 2018, Lawrence Livermore National Security, LLC.
# Produced at the Lawrence Livermore National Laboratory
#
# Created by David Beckingsale, david@llnl.gov
# LLNL-CODE-747640
#
# All rights reserved.
#
# This file is part of Umpire.
#
# For details, see https://github.com/LLNL/Umpire
# Please also see the LICENSE file for MIT license.
##############################################################################

set(umpire_source_include_path ${CMAKE_CURRENT_SOURCE_DIR})

#include_directories(${PROJECT_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(umpire)
